[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/EnemyPage_RightSide/EnemyPageRightSideIcon_Health.png" type="Texture" id=2]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/Almanac_DarkGrayBorder_ForDescriptions_4x4.png" type="Texture" id=3]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/Almanac_BrownBackground_ForDescriptions_3x3.png" type="Texture" id=4]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_XTypeInfoPanel/Shared/Almanac_XTypeInfoPanel_StatPanel/Almanac_XTypeInfoPanel_StatPanel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 1 )

[node name="Almanac_XTypeInfoPanel_StatPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 4.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 100.0
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 104.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 36.0
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 97.0
margin_bottom = 33.0
mouse_filter = 2

[node name="StatIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_top = 7.0
margin_right = 12.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 26.0
mouse_filter = 2
custom_constants/margin_top = 1

[node name="StatNameLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 6.0
margin_right = 32.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "stat"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 60.0
margin_bottom = 26.0
mouse_filter = 2
custom_constants/margin_top = 1

[node name="SepaLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer3"]
margin_top = 6.0
margin_right = 8.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = ":"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 90.0
margin_bottom = 26.0
mouse_filter = 2
custom_constants/margin_top = 1
custom_constants/margin_left = 2

[node name="StatValueLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2"]
margin_left = 2.0
margin_top = 6.0
margin_right = 26.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"

[connection signal="mouse_entered" from="." to="." method="_on_Almanac_XTypeInfoPanel_StatPanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Almanac_XTypeInfoPanel_StatPanel_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_Almanac_XTypeInfoPanel_StatPanel_visibility_changed"]
